stop popular video container being cut off

--- a/common/app/assets/stylesheets/module/content/_media.global.scss
+++ b/common/app/assets/stylesheets/module/content/_media.global.scss
@@ -83,12 +83,11 @@
         max-width: none;
     }
 
-    $video-most-viewed-container: 525px;
     $audio-most-viewed-container: 358px;
 
     .content__main-column--video {
         @include mq(rightCol) {
-            min-height: $video-most-viewed-container;
+            min-height: gs-height(12);
         }
     }
     .content__main-column--audio {
@@ -111,7 +110,7 @@
     }
     .content__secondary-column--video {
         @include mq(rightCol) {
-            height: $video-most-viewed-container;
+            height: auto;
         }
     }
     .content__secondary-column--audio {
